# rename-with-llm

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.yaml  main.py  pyproject.toml  rename_with_llm.py  requirements-dev.txt  requirements.txt
src/: __init__.py  cli.py  constants.py  core.py  detectors.py  extractors.py  naming.py  safety.py
tests/: test_basic.py
